--- a/extensions/amp-story/0.1/amp-story.css
+++ b/extensions/amp-story/0.1/amp-story.css
@@ -391,11 +391,34 @@ amp-story-grid-layer * {
   margin: 0 0 8px;
 }
 
-.i-amphtml-story-bookend-article-image {
+.i-amphtml-story-bookend-article-image,
+.i-amphtml-story-bookend-replay-image,
+.i-amphtml-story-bookend-replay-icon {
   width: 116px;
   height: 116px;
   float: right;
   margin-left: 16px;
+  position: relative;
+}
+
+.i-amphtml-story-bookend-replay {
+  padding: 16px 0;
+  margin: 0 0 16px;
+}
+
+.i-amphtml-story-bookend-replay-icon {
+  width: 48px;
+  height: 48px;
+  background: rgba(60, 60, 60, 0.5);
+  border-radius: 4px;
+}
+
+.i-amphtml-story-bookend-replay-image > svg,
+.i-amphtml-story-bookend-replay-icon > svg {
+  position: absolute;
+  fill: #fff;
+  left: 8px; /* (48/2 - 32/2) */
+  top: 8px; /* (48/2 - 32/2) */
 }
 
 .i-amphtml-story-bookend-heading + .i-amphtml-story-bookend-article-set {
