--- a/extensions/amp-story/0.1/amp-story.css
+++ b/extensions/amp-story/0.1/amp-story.css
@@ -115,6 +115,7 @@ html[📖] body > amp-story:fullscreen {
   border-radius: 40px;
   box-sizing: border-box;
   padding: 8px;
+  position: relative;
 }
 
 .i-amphtml-story-button:active {
@@ -469,4 +470,55 @@ amp-social-share.i-amphtml-story-share-icon[type=email] {
   line-height: 10px;
   font-size: 10px;
   padding: 8px 0 0;
+}
+
+/**
+ * Development mode
+ */
+
+.i-amphtml-story-error-button[data-count="0"],
+.i-amphtml-story-warning-button[data-count="0"] {
+  display: none;
+}
+
+.i-amphtml-story-error-button,
+.i-amphtml-story-warning-button {
+  background-repeat: no-repeat !important;
+  background-position: 50% 50% !important;
+}
+
+.i-amphtml-story-error-button::after,
+.i-amphtml-story-warning-button::after {
+  background-color: #fff;
+  border-radius: 6px;
+  box-sizing: border-box;
+  color: #444;
+  content: attr(data-count);
+  display: inline-block;
+  font-family: Roboto;
+  font-size: 11px;
+  height: 12px;
+  line-height: 12px;
+  padding: 0 6px;
+  position: absolute;
+  right: 0;
+  top: 6px;
+}
+
+.i-amphtml-story-error-button {
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" fill="#DB4437"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/><path d="M0 0h24v24H0z" fill="none"/></svg>') !important;
+}
+
+.i-amphtml-story-warning-button {
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" fill="#FFC107"><path d="M0 0h24v24H0z" fill="none"/><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"/></svg>') !important;
+}
+
+amp-story[standalone] .i-amphtml-story-developer-log {
+  background: rgba(0, 0, 0, 0.85);
+  bottom: 0;
+  color: #fff;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
 }
