--- a/extensions/amp-story/0.1/amp-story.css
+++ b/extensions/amp-story/0.1/amp-story.css
@@ -108,6 +108,8 @@ html[📖] body > amp-story:fullscreen {
 }
 
 .i-amphtml-story-button {
+  background-repeat: no-repeat;
+  background-position: center center;
   float: left;
   height: 40px;
   width: 40px;
@@ -476,19 +478,17 @@ amp-social-share.i-amphtml-story-share-icon[type=email] {
  * Development mode
  */
 
-.i-amphtml-story-error-button[data-count="0"],
-.i-amphtml-story-warning-button[data-count="0"] {
+.i-amphtml-story-dev-logs-button[data-count="0"],
+.i-amphtml-story-bookend-active .i-amphtml-story-dev-logs-button {
   display: none;
 }
 
-.i-amphtml-story-error-button,
-.i-amphtml-story-warning-button {
+.i-amphtml-story-dev-logs-button {
+  background-position: center center !important;
   background-repeat: no-repeat !important;
-  background-position: 50% 50% !important;
 }
 
-.i-amphtml-story-error-button::after,
-.i-amphtml-story-warning-button::after {
+.i-amphtml-story-dev-logs-button::after {
   background-color: #fff;
   border-radius: 6px;
   box-sizing: border-box;
@@ -513,12 +513,86 @@ amp-social-share.i-amphtml-story-share-icon[type=email] {
   background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" fill="#FFC107"><path d="M0 0h24v24H0z" fill="none"/><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"/></svg>') !important;
 }
 
+.i-amphtml-story-success-button {
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" fill="#0F9D58"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>') !important;
+}
+
 amp-story[standalone] .i-amphtml-story-developer-log {
   background: rgba(0, 0, 0, 0.85);
   bottom: 0;
+  box-sizing: border-box;
   color: #fff;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Roboto';
   left: 0;
+  max-height: 45%;
+  padding: 0;
   position: fixed;
   right: 0;
-  top: 0;
+  text-align: left;
+  z-index: 100002;
+}
+
+.i-amphtml-story-developer-log-header {
+  align-items: center;
+  background: rgb(3,169,244, 0.85);
+  display: flex;
+  flex-grow: 0;
+  flex-shrink: 0;
+  font-weight: bold;
+  justify-content: space-between;
+  padding: 12px 20px;
+  text-align: center;
+}
+
+.i-amphtml-story-developer-log-close {
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#FFFFFF" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/><path d="M0 0h24v24H0z" fill="none"/></svg>');
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.i-amphtml-story-developer-log-context {
+  color: #000;
+  font-family: 'Roboto Mono';
+}
+
+.i-amphtml-story-developer-log-entries {
+  list-style-type: none;
+  margin: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 0;
+}
+
+.i-amphtml-story-developer-log-entry {
+  align-items: center;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  display: flex;
+  padding: 20px;
+}
+
+.i-amphtml-story-developer-log-entry::before {
+  background-position: center center !important;
+  background-repeat: no-repeat !important;
+  background-size: cover;
+  content: '';
+  display: inline-block;
+  flex-grow: 0;
+  flex-shrink: 0;
+  height: 32px;
+  margin-right: 20px;
+  width: 32px;
+}
+
+.i-amphtml-story-developer-log-entry-error::before {
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" fill="#DB4437"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/><path d="M0 0h24v24H0z" fill="none"/></svg>') !important;
+}
+
+.i-amphtml-story-developer-log-entry-warning::before {
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" fill="#FFC107"><path d="M0 0h24v24H0z" fill="none"/><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"/></svg>') !important;
+}
+
+.i-amphtml-story-developer-log-entry-success::before {
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" fill="#0F9D58"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>') !important;
 }
