--- a/extensions/amp-story/0.1/amp-story.css
+++ b/extensions/amp-story/0.1/amp-story.css
@@ -163,8 +163,8 @@ amp-story[standalone]:fullscreen {
   display: none;
 }
 
-.audio-playing.unmuted .i-amphtml-story-mute-audio-control,
-.audio-playing:not(.unmuted) .i-amphtml-story-unmute-audio-control {
+.audio-playing[unmuted] .i-amphtml-story-mute-audio-control,
+.audio-playing:not([unmuted]) .i-amphtml-story-unmute-audio-control {
   display: block;
 }
 
