--- a/extensions/amp-story/0.1/amp-story.css
+++ b/extensions/amp-story/0.1/amp-story.css
@@ -163,7 +163,7 @@ amp-story[standalone]:fullscreen {
   display: none;
 }
 
-.audio-playing[unmuted] .i-amphtml-story-mute-audio-control,
+.audio-playing:not([muted]) .i-amphtml-story-mute-audio-control,
 .audio-playing[muted] .i-amphtml-story-unmute-audio-control {
   display: block;
 }
