--- a/css/amp.css
+++ b/css/amp.css
@@ -262,6 +262,10 @@ i-amphtml-sizer {
   overflow: hidden !important;
 }
 
+.i-amphtml-scroll-disabled>body {
+  position: fixed !important;
+}
+
 .i-amphtml-scroll-disabled {
   overflow-x: hidden !important;
   overflow-y: hidden !important;
