--- a/extensions/amp-story/0.1/amp-story-desktop.css
+++ b/extensions/amp-story/0.1/amp-story-desktop.css
@@ -249,10 +249,6 @@ amp-story-page.i-amphtml-story-page-shown {
   right: 0;
 }
 
-.i-amphtml-story-share:hover:before {
-  width: calc(100% - 16px);
-}
-
 .i-amphtml-story-share .i-amphtml-story-share-list > li  {
   opacity: 0;
   transition: opacity 300ms linear;
@@ -313,6 +309,10 @@ amp-story-page.i-amphtml-story-page-shown {
   height: 28px;
 }
 
+.i-amphtml-story-share:hover:before {
+  width: calc(100% + 16px);
+}
+
 .i-amphtml-story-share .i-amphtml-story-share-icon {
   display: flex!important;
   justify-content: center;
@@ -322,6 +322,23 @@ amp-story-page.i-amphtml-story-page-shown {
   background-size: 30px 30px;
   background-color: transparent;
   padding: 0;
+}
+
+[desktop] .i-amphtml-story-share-icon {
+  font-size: 0px;
+  background-position-y: 5px;
+}
+
+[desktop] .i-amphtml-story-share-icon::before {
+  background-color: transparent;
+}
+
+[desktop] .i-amphtml-story-share-icon:active::before {
+  background-color: transparent;
+}
+
+[desktop] .i-amphtml-story-share-list {
+  margin-right: 108px;
 }
 
 .i-amphtml-story-share .i-amphtml-story-share-name {
