--- a/extensions/amp-story/0.1/amp-story-desktop.css
+++ b/extensions/amp-story/0.1/amp-story-desktop.css
@@ -133,8 +133,8 @@ amp-story-page.i-amphtml-story-page-shown {
 [desktop] amp-story-page {
   left: 50%!important;
   right: auto!important;
-  margin: 112px auto;
-  max-height: 736px;
+  margin: auto;
+  max-height: 70vh;
   max-width: 338px;
   box-shadow: 0 0 15px rgba(0, 0, 0, .4);
 }
