--- a/extensions/amp-apester-media/0.1/amp-apester-media.css
+++ b/extensions/amp-apester-media/0.1/amp-apester-media.css
@@ -22,6 +22,7 @@
 }
 
 .i-amphtml-apester-iframe-ready {
+  transition: opacity 1s ease-out;
   opacity: 1 !important;
 }
 
@@ -121,4 +122,14 @@
 .amp-apester-loader-logo svg {
   height: 100%;
   width: 100%;
+}
+
+.amp-apester-fullscreen {
+  background: rgba(34, 36, 38, .97) !important;
+  position:   fixed !important;
+  width:      100vw;
+  height:     100vh;
+  z-index:    2147483646 !important;
+  zoom:       1;
+  -webkit-overflow-scrolling: touch !important;
 }
